Added content to Oving 1 and 2

--- a/Oving1/Oppgave1.tex
+++ b/Oving1/Oppgave1.tex
@@ -1,1 +1,27 @@
+\section{Oppgave1}
 
+	{\bf Hva var den utløsende faktoren og resultatmålet for dette prosjektet?
+	Identifiser prosjektets interessenter og drøft gevinster (effektmål) av 
+	prosjektet for hver interessentkategori:}
+
+	{\bf Utløsende faktoren:}
+	På grunnlag av finanskrisen i 2008-2009 ble det ytteret et ønske om å øke
+	sysselsettingen i privat sektor. Dette blir den utløsende faktoren. 
+
+	{\bf Resultatmål:}
+	For å øke sysselsettingen i privat sektor fikk kystverket tildelt midler til
+	å starte et prosjekt for mudring og utvidelse av en havn i nord Norge. Selve
+	mudring og utvildese av havn vil bli resultatmålet av prosjektet. 
+
+	{\bf Interessenter + effektmål:}
+	\begin{itemize}
+		\item {\bf Regjeringen:} effektmålene for regjeringen er å kunne oppnå økt sysselsetting
+		i privat sektor.
+		\item {\bf Kystverket:} økt trafikk i havna
+		\item{\bf Besøkende i havna (gjester):} få en bedre opplevelse ved besøk i havna (renere).
+		\item{\bf Skippere ved ulike fartøy(cruiseskip, lasteskip og fiskefartøy):} lettere kunne
+		manøvrere seg i havna, større og mer dyptgående fartøy skal kunne besøke havna. 
+		\item {\bf Kommunen:} Økt turrisme ved besøk av cruiseskip
+		\item {\bf Forurensningsmyndighetene:} oppnå en renere havneområde
+		\item {\bf Lokale havnevesenet:} lettere å ta imot større fartøy og flere fartøy. 
+	\end{itemize}
