--- a/Notes/curriculum.tex
+++ b/Notes/curriculum.tex
@@ -1,35 +1,14 @@
 
 {\Huge Curriculum} \\
 
-	Han, Kamber \& Pei, Data Mining: Concepts and Techniques, 3rd ed. The Morgan Kaufmann Series 
-	in Data Management Systems. Morgan Kaufmann Publishers, July 2011.
-	(Tilgjengeleg frå It’s Learning). 
-		\begin{itemize}
-			\item Kapittel 4, unnateke 4.5
-		\end{itemize} 
-	
-	Tan, Steinbach \& Kumar, Introduction to Data Mining, Pearson Int. ed. 2006. 
-		\begin{itemize}
-			\item Kapittel 1 
-			\item Kapittel 2, unnateke s. 79-84. 
-			\item Kapittel 3 
-			\item Kapittel 4, unnateke 4.4.3, 4.4.4, og 4.6 
-			\item Kapittel 5.2 
-			\item Kapittel 6, unnateke 6.6.2. Side 374- og resten av kap. er kursorisk 
-			\item Kapittel 8, unnateke 8.2.6 og 8.3.3 
-		\end{itemize}
-
-	B. Liu, Web Data Mining: Exploring Hyperlinks, Contents, and Usage Data(1st. Edition), Springer, 
-	(Tilgjengeleg frå It’s Learning). 
-		\begin{itemize}
-			\item Kapittel 12 Web Usage Mining, unnateke s. 470-471, 12.3.4, og 12.3.5 
-		\end{itemize}
-
-	R. Mazza. Introduction to Information Visualization. (Tilgjengelig fra Its learning)
-		\begin{itemize}
-			\item Kap 2
-			\item Kap 4
-		\end{itemize}
-
-	Microsoft. Introduction to MDX. (Tilgjengelig fra It's Learning). (Kursorisk, vil ikkje vere spørsmål 
-	frå dette på eksamen)
+	\begin{itemize}
+		\item {\bf Chapter 1:} Introduction: Why Project Management? 
+		\item {\bf Chapter 2:} The Organizational Context: Strategy, Sturcutre, and Culture
+		\item {\bf Chapter 5:} Scope Management 
+		\item {\bf Chapter 7:} Risk Management 
+		\item {\bf Chapter 8:} Cost Estimation and Budgeting 
+		\item {\bf Chapter 9:} Project Scheduling: Networks, Duration Estimation, and Critical Path 
+		\item {\bf Chapter 10:} Project Scheduling: Lagging, Crashing, and Activity Networks  
+		\item {\bf Chapter 12:} Resource Management 
+		\item {\bf Chapter 13:} Project Evaluation and Control
+	\end{itemize}
