--- a/Oving2/Tasks.tex
+++ b/Oving2/Tasks.tex
@@ -141,6 +141,70 @@
 	{\bf Utvikle en strategi for å håntere de forskjellige interessentene i Bradley-prosjektet.
 	Angående prosjektets omfang, kan du identifisere kompromisser?}
 
+	For å kunne holde kontroll på de forskjellige interessentene i Bradley-prosjektet ville
+	jeg brukt en "Responsability Assignment Matrix (RAM)" som kan klart og tydelig definere
+	hvem som har ansvar for hvilke oppgaver. For å kunne utvikle en RAM må man i utgangspunktet
+	utrede en WBS som krever full krontroll på omfang av prosjektet og sluttleveransen.
+	Etter å ha på plass en WBS (klare arbeidsoppgaver) og en RAM (klare ansvarsområder) så mener
+	jeg mange av problemene kunne blitt unngått. 
+
+	Når det gjelder kompromisser ang prosjektets omfang er det vanskelig å kunne definere dette
+	på grunnlang av kompetanse, men mener at dette kunne blitt løst på en bedre måte. 
+	I dette prosjektet var det som sagt ingen kontroll på hvem som fikk gjøre endringer
+	på hva de i utgangspunktet skulle levere. Hvis de 1) hadde et definert omfang 2) definerte
+	arbeidspakker (WBS) 3) definerte ansvarsområder, så mener jeg "control management" må 
+	plass for å kunne kontrollere endringene som kommer inn. Er de rimelige i forhold
+	til omfang, budsjett, ressurser og tid? Dette er spørsmål som må kunne besvares før
+	man kommer med endringer og vurderer kompromisser i et så omfattende prosjekt som
+	Bradley-prosjektet. 
+
+
 
 \clearpage
 \section*{Oppgave 5}
+	{\bf Oppgave 1 fra tekstbok: "What are the principal benefits of developing a comprehensive
+	project scope analysis?" - "Hva er de viktigste fordelene med å utvikle en helhetlig anlyse 
+	av prosjekters omfang (scope) ?"} \\
+
+		Som alle prosjekter starter man med ett eller flere mål man vil oppnå. For å 
+		kunne oppnå dette må man hvite konkret hva man må gjøre for å kunne konkludere
+		med at alle mål var oppfyllt ved leveranse. Dette havner under "project scope".
+		Det å kunne vite prosjektets omfang er veldig viktig. Hvis man i starten av 
+		et prosjekt gjør grundige analyser på hva kunden vil ha kan man unngå en stor
+		fiasko med en dårlig leveranse og store kostnader ved å rette opp feil. 
+
+		Endringer er noe som er vanlige å forekomme underveis i et prosjekt. Endringer
+		kommer ofte av feil planlegging, ny kunnskap om prosjektdomene, eksterne hendelser
+		eller endringsforespørsel fra kunde. Ved slike hendelser er det viktig å vite 
+		hvem som kan komme å gjøre endringer og fordeler/ulemper med en endring. Om man 
+		har dette på plass kan man med en vedtagelse av endringer vite konsekvensen og 
+		forutse eventuelle forsinkelser, kostnader, etc. 
+
+		Et hvert prosjekt har definerte ressursrammer. Med dette definerer man antall 
+		personer, timer og penger. For å kunne estimere dette må man kunne ha et klart
+		hva prosjektets omfang er i detalj. Om man har kontroll på dette kan man lettere
+		styre et prosjekt til estimerte verdier som gir en meget fornøyd kunde. 
+
+		Ved prosjektstart er det ofte vanlig å signere kontrakter med kunde. En av de
+		vanlige kontraktene man inngår går på forsikring av overskudd. Om man ikke gjør
+		gode nok analyser og inngår en "dere har ansvar om prosjektet går over estimert
+		sum" (også kalt en lumå-sum kontrakt) så kan dette få store økonomiske usikkerheter
+		for bedriften. Ved å gjøre gode analyser i forkant og ha rette estimater fra start
+		kan man i større grad utelukke store økonomiske usikkerheter. 
+
+	\clearpage
+	{\bf Oppgave 7 fra tekstbok: "What is the logic behind developing a plan for project closeout
+	prior to even beginning the project?" - "Hva er logikken bak å utvikle en plan for prosjektets
+	avslutning før selve prosjektet har startet?"} \\
+
+		{\bf "Start with the end in mind" } \\
+		For å kunne planlegge hva man skal gjøre må man vite hvor man skal ende og deretter
+		jobbe seg mot målet. Til tidligere i utviklingen av omfanget man tar med avslutning 
+		av prosjektet, jo mer vil informasjonen som kommer frem underveis i utvikling bli. 
+
+		I et prosjekt krever det ofte dokumentasjon ved sluttleveranse. Disse dokumentene
+		vil måtte startes på i starten av prosjektet, men leveres ved "closeout". Det 
+		er derfor veldig lurt å ha avtalt dette i en tidlig fase. 
+		Hvis man starter med å planlegge closeout i en sen fase kan det medføre mye 
+		tid på å samle sammen gamle logger for å skrape sammen dokumentasjonen kunden
+		ønsker. Dette kan ta lang tid og øke kostnadene.
