--- a/Oving2/frontpage.tex
+++ b/Oving2/frontpage.tex
@@ -3,7 +3,7 @@
 
 {\Huge \bf Øving 2} \\[1.0cm]
 {\Huge \bf TPK4115} \\[1.0cm]
-{\Large \bf Prosjektledelse og styring} \\[1.0cm]
+{\Large \bf Prosjektplanlegging og styring} \\[1.0cm]
 \vspace{1cm}
 
 {\bf Av Marte Løge, Tina Syversen og Marte Hallan}
